--- a/package.json
+++ b/package.json
@@ -2,6 +2,9 @@
   "name": "CetusTracker",
   "version": "0.0.1",
   "private": true,
+  "rnpm": {
+    "assets": ["./assets/fonts"]
+  },
   "scripts": {
     "start": "node node_modules/react-native/local-cli/cli.js start",
     "test": "jest"
